// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is disabled 1`] = `
<button
  class="root disabled"
  disabled=""
/>
`;

exports[`Button renders correctly 1`] = `
<button
  class="root"
/>
`;

exports[`Button renders with a label 1`] = `
<button
  class="root"
  label="send"
>
  send
</button>
`;
